<resources>
    <string name="app_name">Two Activities</string>
    <string name="send">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="edit_text_main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply here</string>
    <string name="text_header_reply">Reply Received</string>
</resources>